2010-10-10  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	Release version 1.7.2.

	* configure.ac: Bump version to 1.7.2.

	* NEWS: Describe changes to 1.7.2.

2010-08-12  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/testsuite/dlvhex/TestPlugin.cpp: Added testcases for newly
	discovered bugs (see also Trac issues #25 #25 #27).
	* examples/rec_agg_bug1.hex: Likewise.
	* examples/rec_agg_bug2.hex: Likewise.
	* examples/rec_agg_bug3.hex: Likewise.

2010-08-04  Peter Schueller  <ps@kr.tuwien.ac.at>

	* m4/boost.m4: Temporary fix for iostreams configure check for
	boost versions >=1.44.

2010-07-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* TODO: Update.

	* include/dlvhex/Makefile.am: Highlight which header file belongs
	to which library.

2010-07-17  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	Release version 1.7.1.

	* configure.ac: Bump version to 1.7.1.

	* NEWS: Describe changes to 1.7.1.

	* MAINTAINER-README: Update.
	* README: Likewise.

2010-07-14  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/ASPSolverManager.h: Revised ASPSolver interface
	another time, allowing plugins to determine default dlvhex solver method.
	Added dlvdb ".typ" file support to dlvhex (now also usable for plugins).
	Removed DLVDBProcess, DLVProcess is a generic debugging-capable process.
	ASPSolverManager::SoftwareConfiguration is stored in ProgramCtx and
	determines dlvhex solver software usage and options.
	* include/dlvhex/ASPSolver.h: Likewise.
	* include/dlvhex/DLVProcess.h: Likewise.
	* include/dlvhex/ProgramCtx.h: Likewise.
	* include/dlvhex/Makefile.am: Likewise.
	* src/dlvhex/GuessCheckModelGenerator.cpp: Likewise.
	* src/dlvhex/OrdinaryModelGenerator.cpp: Likewise.
	* src/dlvhex/FixpointModelGenerator.cpp: Likewise.
	* src/dlvhex/dlvhex.cpp: Likewise.
	* src/dlvhex/ASPSolverManager.cpp: Likewise.
	* src/dlvhex/ProcessBuf.cpp: Likewise.
	* src/dlvhex/ASPSolver.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.
	* src/dlvhex/DLVProcess.cpp: Likewise.