@@ -4,4 +4,4 @@ foo(X,Y,Z) :- +(X,Y,Z).
 bar(X,Y,Z) :- *(X,Y,Z).
 baz(X,Y) :- #succ(X,Y).
 boo(X) :- #int(X).
-
+% this file only works for dlv < 2010-10-14
