@@ -1,0 +1,1 @@
+{baz(0,1), baz(1,2), baz(2,3), baz(3,4), baz(4,5), baz(5,6), baz(6,7), baz(7,8), baz(8,9), baz(9,10), bar(0,0,0), bar(0,1,0), bar(0,2,0), bar(0,3,0), bar(0,4,0), bar(0,5,0), bar(0,6,0), bar(0,7,0), bar(0,8,0), bar(0,9,0), bar(0,10,0), bar(1,0,0), bar(1,1,1), bar(1,2,2), bar(1,3,3), bar(1,4,4), bar(1,5,5), bar(1,6,6), bar(1,7,7), bar(1,8,8), bar(1,9,9), bar(1,10,10), bar(2,0,0), bar(2,1,2), bar(2,2,4), bar(2,3,6), bar(2,4,8), bar(2,5,10), bar(3,0,0), bar(3,1,3), bar(3,2,6), bar(3,3,9), bar(4,0,0), bar(4,1,4), bar(4,2,8), bar(5,0,0), bar(5,1,5), bar(5,2,10), bar(6,0,0), bar(6,1,6), bar(7,0,0), bar(7,1,7), bar(8,0,0), bar(8,1,8), bar(9,0,0), bar(9,1,9), bar(10,0,0), bar(10,1,10), boo(0), boo(1), boo(2), boo(3), boo(4), boo(5), boo(6), boo(7), boo(8), boo(9), boo(10), foo(0,0,0), foo(0,1,1), foo(0,2,2), foo(0,3,3), foo(0,4,4), foo(0,5,5), foo(0,6,6), foo(0,7,7), foo(0,8,8), foo(0,9,9), foo(0,10,10), foo(1,0,1), foo(1,1,2), foo(1,2,3), foo(1,3,4), foo(1,4,5), foo(1,5,6), foo(1,6,7), foo(1,7,8), foo(1,8,9), foo(1,9,10), foo(2,0,2), foo(2,1,3), foo(2,2,4), foo(2,3,5), foo(2,4,6), foo(2,5,7), foo(2,6,8), foo(2,7,9), foo(2,8,10), foo(3,0,3), foo(3,1,4), foo(3,2,5), foo(3,3,6), foo(3,4,7), foo(3,5,8), foo(3,6,9), foo(3,7,10), foo(4,0,4), foo(4,1,5), foo(4,2,6), foo(4,3,7), foo(4,4,8), foo(4,5,9), foo(4,6,10), foo(5,0,5), foo(5,1,6), foo(5,2,7), foo(5,3,8), foo(5,4,9), foo(5,5,10), foo(6,0,6), foo(6,1,7), foo(6,2,8), foo(6,3,9), foo(6,4,10), foo(7,0,7), foo(7,1,8), foo(7,2,9), foo(7,3,10), foo(8,0,8), foo(8,1,9), foo(8,2,10), foo(9,0,9), foo(9,1,10), foo(10,0,10)}
